# game

./: Cargo.toml  LICENSE  README.md  run
src/: lib.rs  minimax.rs  state.rs
static/: index.html
static/styles/: main.css
