[package]
name = "game"
version = "0.1.0"
authors = ["svn37 <leonreign@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
serde_json = "1.0"
itertools = "0.10"
rand = "0.8"

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.serde]
version = "1.0"
features = [
  'derive',
]

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'DomTokenList',
  'Element',
  'EventTarget',
  'HtmlCollection',
  'KeyboardEvent',
  'Storage',
  'Window',
]

[profile.release]
lto = true
